# ckanext-gallery

./: .bowerrc  .cz.toml  .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  bower.json  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.py  test.ini
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: main.yml  tests.yml
ckanext/: __init__.py
ckanext/gallery/: plugin.py
ckanext/gallery/lib/: __init__.py  helpers.py
ckanext/gallery/logic/: validators.py
ckanext/gallery/plugins/: __init__.py  gallery.py  iiif.py  image.py  interfaces.py
ckanext/gallery/theme/assets/: webassets.yml
ckanext/gallery/theme/assets/js/: gallery.js
ckanext/gallery/theme/assets/less/: gallery.less
ckanext/gallery/theme/public/: resource.config
ckanext/gallery/theme/public/css/: gallery.css  gallery.css.map  gallery.scss
ckanext/gallery/theme/public/js/: gallery.js
ckanext/gallery/theme/public/scripts/: gallery.js
ckanext/gallery/theme/templates/: base.html
ckanext/gallery/theme/templates/gallery/: form.html  view.html
ckanext/gallery/theme/templates/gallery/snippets/: gallery.html  lightbox.html
docker/: Dockerfile
docs/: index.md
docs/_scripts/: gen_api_pages.py
tests/: test_helpers.py  test_validators.py
